[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
serde = {version="1.0.136", features=["derive"]}
jwt = "0.16.0"
hmac="0.12.1"
sha2 = "0.10.2"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
log = { version = "0.4", features = ["std", "serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
serde_json = "1.0.79"
bcrypt = "0.12.1"